<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1a1a">

    <TextView
        android:id="@+id/createReminderTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#2d2d2d"
        android:gravity="center_horizontal|center_vertical"
        android:text="Create Reminder"
        android:textColor="#75ffffff"
        android:textSize="24dp"
        android:textStyle="bold"
        android:visibility="visible" />

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/createReminderTitle"
        android:background="#30ffffff"></View>

    <!--Type-->
    <TextView
        android:id="@+id/createType"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/lineView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="Type:"
        android:textColor="#75ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lineView"
        android:layout_marginTop="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/createType"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="Enter the type of reminder"
        android:paddingTop="2dp"
        android:singleLine="true"
        android:textColor="#40ffffff"
        android:textColorHighlight="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textColorLink="#40ffffff"
        android:textSize="13sp" />

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/createType"
        android:layout_marginLeft="10dp"
        android:background="#30ffffff"></View>

    <!--Description-->
    <TextView
        android:id="@+id/createDescription"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/lineView1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="top"
        android:text="Description:"
        android:textColor="#75ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/lineView1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/createDescription"
        android:background="@null"
        android:gravity="top"
        android:hint="Enter a description"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:textColor="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="13dp" />

    <View
        android:id="@+id/lineView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/inputDescription"
        android:layout_marginLeft="10dp"
        android:background="#30ffffff" />

    <!--Alert-->
    <TextView
        android:id="@+id/createAlert"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@id/lineView2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="Alert:"
        android:textColor="#75ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/lineView3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/createAlert"
        android:layout_marginLeft="10dp"
        android:background="#30ffffff" />

    <!--Time-->
    <TextView
        android:id="@+id/createTime"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/lineView3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/createAlert"
        android:gravity="center_vertical"
        android:onClick="showTimePickerDialog"
        android:text="Time:"
        android:textColor="#75ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/inputTimeButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/lineView3"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/createTime"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="Set a time"
        android:inputType="datetime"
        android:paddingTop="2dp"
        android:textColor="#40ffffff"
        android:textColorHighlight="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textColorLink="#40ffffff"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/repeatView"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_below="@id/createAlert"
        android:layout_toRightOf="@id/inputTimeButton"
        android:gravity="center_vertical"
        android:text="Repeat:"
        android:textColor="#75ffffff"
        android:textColorHighlight="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textColorLink="#40ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/inputRepeatButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/createAlert"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@id/repeatView"
        android:gravity="center|start"
        android:includeFontPadding="true"
        android:text="Never"
        android:textAllCaps="false"
        android:textColor="#40ffffff"
        android:textColorHighlight="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textColorLink="#40ffffff" />

    <Button
        android:id="@+id/inputDateButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/inputTimeButton"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/createTime"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="Set a date"
        android:paddingTop="2dp"
        android:textColor="#40ffffff"
        android:textColorHighlight="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textColorLink="#40ffffff"
        android:textSize="13dp" />


    <View
        android:id="@+id/lineView4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/inputDateButton"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/createAlert"
        android:background="#30ffffff" />

    <View
        android:id="@+id/lineView6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/inputTimeButton"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/createTime"
        android:background="#30ffffff" />

    <!--Location-->
    <TextView
        android:id="@+id/createLocation"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/inputDateButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/createAlert"
        android:gravity="center_vertical"
        android:text="Location:"
        android:textColor="#75ffffff"
        android:textColorHighlight="#40ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/inputDateButton"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/createLocation"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="Set a location"
        android:paddingTop="2dp"
        android:textColor="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="13dp" />

    <View
        android:id="@+id/lineView5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/createLocation"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/createAlert"
        android:background="#30ffffff" />


    <View
        android:id="@+id/centerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"></View>

    <View
        android:id="@+id/borderView"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="#30ffffff"></View>

    <Button
        android:id="@+id/createReminderCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignRight="@id/centerView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="1dp"
        android:background="#2d2d2d"
        android:text="Cancel"
        android:textColor="#95990000"
        android:visibility="visible" />

    <Button
        android:id="@+id/createReminderDone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/centerView"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="1dp"
        android:background="#2d2d2d"
        android:text="Done"
        android:textColor="#993bb143"
        android:textStyle="bold"
        android:visibility="visible" />

    <TimePicker
        android:id="@+id/inputTime"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="Set a time"
        android:inputType="datetime"
        android:paddingTop="2dp"
        android:textSize="13dp"
        android:visibility="gone" />

    <DatePicker
        android:id="@+id/inputDate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@null"
        android:foregroundGravity="top"
        android:textSize="13dp"
        android:visibility="gone" />


</RelativeLayout>