...
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingTop="10dp"
        android:textColor="#476877"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/remItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/btnEdit"
        android:layout_toRightOf="@id/remItem"
        android:paddingTop="10dp"
...
        android:textSize="18dp" />

    <!--This should include the location/time for an ALERT-->


    <TextView
        android:id="@+id/remAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remItemName"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="4dp"
...
