<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    ID to be renamed createNewReminderButton; Temporarily named to crtNewReminder-->
    <item
        android:id="@+id/pm_createReminder"
        android:title="Create New Reminder"/>

    <item
        android:id="@+id/pm_editList"
        android:title="Edit List"/>

    <item
        android:id="@+id/pm_deleteList"
        android:title="Delete List"/>


</menu>